jumping nav fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,10 +21,6 @@ body
    max-height: 650px;
    overflow: hidden;
  }
-.navbar-default .navbar-nav > li > a:focus, .navbar-default .navbar-nav > li > a:hover
-{
-  padding:0px;
-}
 
 .navbar-default
 {
